Intentando solucionar bugs, creado fichero, cruzamos dedos para que funcione